--- a/templates/base.html
+++ b/templates/base.html
@@ -12,19 +12,22 @@
         <div class="chatbox__support">
             <div class="chatbox__header">
                 <div class="chatbox__image--header">
-                    <img src="https://img.icons8.com/color/48/000000/circled-user-female-skin-type-5--v1.png" alt="image">
+                <img src = "static/images/New-Ocean-Information-System-logo-19.png" alt="image_logo" style="width:93px;height:31px;left: -20px;">
                 </div>
                 <div class="chatbox__content--header">
-                    <h4 class="chatbox__heading--header">Chat support</h4>
-                    <p class="chatbox__description--header">Hi. I am NOIS Staff. How can I help you?</p>
+                    <h4 class="chatbox__heading--header">New Ocean AI Assistant</h4>
                 </div>
             </div>
             <div class="chatbox__messages">
-                <div></div>
+                <div class="messages__item messages__item--visitor">  
+                    Hi. I am NOIS Staff. How can I help you? 
+                </div>
+                <img src="https://img.icons8.com/color/48/000000/circled-user-female-skin-type-5--v1.png" alt="image" style="width:40px;height:40px;">
             </div>
             <div class="chatbox__footer">
                 <input type="text" placeholder="Write a message...">
                 <button class="chatbox__send--footer send__button">Send</button>
+                
             </div>
         </div>
         <div class="chatbox__button">
