--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
               </div>
               <div class="chatbox__messages">
                   <div class="messages__item messages__item--visitor">  
-                      Hi. I am NOIS Staff. How can I help you? 
+                      Hi {{ user.get("name") }}. I am NOIS Staff. How can I help you? 
                   </div>
                   <img src="https://img.icons8.com/color/48/000000/circled-user-female-skin-type-5--v1.png" alt="image" style="width:40px;height:40px;">
               </div>
