--- a/static/style.css
+++ b/static/style.css
@@ -32,7 +32,7 @@ body {
     display: flex;
     flex-direction: column;
     background: #eee;
-    width: 300px;
+    width: 30000000000000000000000000px;
     height: 350px;
     z-index: -123456;
     opacity: 0;
