--- a/templates/login.html
+++ b/templates/login.html
@@ -33,6 +33,7 @@
                     <img src="https://img.icons8.com/color/48/000000/circled-user-female-skin-type-5--v1.png" alt="image" style="width:40px;height:40px;">
                 </div>
                 <div class="chatbox__footer">
+                    <button class="clear-button--footer clear__button">Clear</button>
                     <input type="text" placeholder="Write a message...">
                     <button class="chatbox__send--footer send__button">Send</button>
                     
