--- a/templates/chat.html
+++ b/templates/chat.html
@@ -41,8 +41,7 @@
 							</div>
 						</div>
 						<div id="messageFormeight" class="card-body msg_card_body">
-							
-							
+
 						</div>
 						<div class="card-footer">
 							<form id="messageArea" class="input-group">
@@ -60,6 +59,8 @@
 		<script>
 			// scrollToTopOfUser();
 			$(document).ready(function() {
+				// loading animation off
+				$("#loading").hide();
 				$("#messageArea").on("submit", function(event) {
 					const date = new Date();
 					const hour = date.getHours();
@@ -67,11 +68,18 @@
 					const str_time = hour+":"+minute;
 					var rawText = $("#text").val();
 
-					var userHtml = '<div class="d-flex justify-content-end mb-4"><div class="msg_cotainer_send">' + rawText + '<span class="msg_time_send">'+ str_time + '</span></div><div class="img_cont_msg"><img src="https://i.ibb.co/d5b84Xw/Untitled-design.png" class="rounded-circle user_img_msg"></div></div>';
-					
+					var userHtml = '<div class="d-flex justify-content-end mb-4"><div class="msg_cotainer_send">' + rawText + '<span class="msg_time_send">'+ str_time + '</span></div><div class="img_cont_msg"><img src="https://i.ibb.co/d5b84Xw/Untitled-design.png" class="rounded-circle user_img_msg"></div></div>';			
 					$("#text").val("");
 					$("#messageFormeight").append(userHtml);
-					
+					var tempBotHtml = 
+					'<div class=" d-flex justify-content-start mb-4 myDiv"><div class="img_cont_msg">' 
+						+ '<img src="https://i.ibb.co/fSNP7Rz/icons8-chatgpt-512.png" class="rounded-circle user_img_msg">'
+						+ '</div><div class="msg_cotainer">' 
+							+ '<div class="loader"></div>'
+								+ '<span class="msg_time">' + str_time 
+								+ '</span></div></div>';
+								
+								$("#messageFormeight").append($.parseHTML(tempBotHtml));
 					$.ajax({
 						data: {
 							msg: rawText,	
@@ -79,15 +87,19 @@
 						type: "POST",
 						url: "/get",
 					}).done(function(data) {
-						var botHtml = '<div class="d-flex justify-content-start mb-4"><div class="img_cont_msg"><img src="https://i.ibb.co/fSNP7Rz/icons8-chatgpt-512.png" class="rounded-circle user_img_msg"></div><div class="msg_cotainer">' + data + '<span class="msg_time">' + str_time + '</span></div></div>';
+						var myDiv = document.getElementById("myDiv");
+						$(".myDiv").remove();
+
+						var botHtml = '<div class="d-flex justify-content-start mb-4"><div class="msg_cotainer">' + data + '<span class="msg_time">' + str_time + '</span></div></div>';
 						$("#messageFormeight").append($.parseHTML(botHtml));
+						// $("#loading").hide();
 						scrollToTopOfResponse();
 						
 					});
 					event.preventDefault();
 				});
 
-				        // Add event listener for input field keyup event
+				// Add event listener for input field keyup event
 				$("#text").on("keyup", function(event) {
 	            // Check if Enter key (key code 13) is pressed
     	        if (event.keyCode === 13) {
