--- a/templates/chat.html
+++ b/templates/chat.html
@@ -10,6 +10,15 @@
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css')}}"/>
+
+		<!-- word fonts  -->
+		<style>
+			@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+			
+			body {
+				font-family: 'Roboto', sans-serif;
+			}
+		</style>
 		
 	</head>
 	
@@ -32,8 +41,7 @@
 							</div>
 						</div>
 						<div id="messageFormeight" class="card-body msg_card_body">
-							
-							
+
 						</div>
 						<div class="card-footer">
 							<form id="messageArea" class="input-group">
@@ -49,7 +57,10 @@
 		</div>
 		
 		<script>
+			// scrollToTopOfUser();
 			$(document).ready(function() {
+				// loading animation off
+				$("#loading").hide();
 				$("#messageArea").on("submit", function(event) {
 					const date = new Date();
 					const hour = date.getHours();
@@ -57,11 +68,18 @@
 					const str_time = hour+":"+minute;
 					var rawText = $("#text").val();
 
-					var userHtml = '<div class="d-flex justify-content-end mb-4"><div class="msg_cotainer_send">' + rawText + '<span class="msg_time_send">'+ str_time + '</span></div><div class="img_cont_msg"><img src="https://i.ibb.co/d5b84Xw/Untitled-design.png" class="rounded-circle user_img_msg"></div></div>';
-					
+					var userHtml = '<div class="d-flex justify-content-end mb-4"><div class="msg_cotainer_send">' + rawText + '<span class="msg_time_send">'+ str_time + '</span></div><div class="img_cont_msg"><img src="https://i.ibb.co/d5b84Xw/Untitled-design.png" class="rounded-circle user_img_msg"></div></div>';			
 					$("#text").val("");
 					$("#messageFormeight").append(userHtml);
-
+					var tempBotHtml = 
+					'<div class=" d-flex justify-content-start mb-4 myDiv"><div class="img_cont_msg">' 
+						+ '<img src="https://i.ibb.co/fSNP7Rz/icons8-chatgpt-512.png" class="rounded-circle user_img_msg">'
+						+ '</div><div class="msg_cotainer">' 
+							+ '<div class="loader"></div>'
+								+ '<span class="msg_time">' + str_time 
+								+ '</span></div></div>';
+								
+								$("#messageFormeight").append($.parseHTML(tempBotHtml));
 					$.ajax({
 						data: {
 							msg: rawText,	
@@ -69,12 +87,57 @@
 						type: "POST",
 						url: "/get",
 					}).done(function(data) {
-						var botHtml = '<div class="d-flex justify-content-start mb-4"><div class="img_cont_msg"><img src="https://i.ibb.co/fSNP7Rz/icons8-chatgpt-512.png" class="rounded-circle user_img_msg"></div><div class="msg_cotainer">' + data + '<span class="msg_time">' + str_time + '</span></div></div>';
+						var myDiv = document.getElementById("myDiv");
+						$(".myDiv").remove();
+
+						var botHtml = '<div class="d-flex justify-content-start mb-4"><div class="msg_cotainer">' + data + '<span class="msg_time">' + str_time + '</span></div></div>';
 						$("#messageFormeight").append($.parseHTML(botHtml));
-						$("#messageFormeight").scrollTop($("#messageFormeight")[0].scrollHeight);
+						// $("#loading").hide();
+						scrollToTopOfResponse();
+						
 					});
 					event.preventDefault();
 				});
+
+				// Add event listener for input field keyup event
+				$("#text").on("keyup", function(event) {
+	            // Check if Enter key (key code 13) is pressed
+    	        if (event.keyCode === 13) {
+        	        scrollToTopOfUser();
+           		}
+        });
+				// scroll ( only work with fixed 1 line)
+				function scrollToTopOfResponse() {
+					var messageFormeight = document.getElementById("messageFormeight");
+					var userResponses = messageFormeight.getElementsByClassName("msg_cotainer_send");
+					var latestUserResponse = userResponses[userResponses.length - 1];
+
+					// Adjust the scroll position by adding a fixed number of pixels (e.g., 50) ( fixed)
+					// var scrollOffset = 50;
+					// var scrollPosition = latestUserResponse.offsetTop - scrollOffset;
+					
+					// dynamic
+					var responseHeight = latestUserResponse.scrollHeight;
+
+					// Set the scroll offset as the height of the response
+					var scrollOffset = responseHeight;
+
+					// Calculate the scroll position by subtracting the scroll offset
+					var scrollPosition = latestUserResponse.offsetTop - scrollOffset;
+
+					// Scroll to the latest user response with the adjusted position
+					messageFormeight.scrollTo({ top: scrollPosition, behavior: 'smooth' });
+        		}
+
+				function scrollToTopOfUser() {
+					var messageFormeight = document.getElementById("messageFormeight");
+					var userResponses = messageFormeight.getElementsByClassName("loader");
+					var latestUserResponse = userResponses[userResponses.length - 1];
+
+					// Scroll to the latest user response
+					latestUserResponse.scrollIntoView({ behavior: 'smooth', block: 'end' });
+				}
+				
 			});
 		</script>
         
