--- a/templates/chat.html
+++ b/templates/chat.html
@@ -5,7 +5,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Chatbot</title>
+		<title>NOIS Chatbot</title>
+		<link rel="icon" type="image/x-icon" href="https://acschatbotnoisintern.blob.core.windows.net/nois-logo/New-Ocean-Infomation-System-logo-29.png">
+
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -31,11 +33,11 @@
 						<div class="card-header msg_head">
 							<div class="d-flex bd-highlight">
 								<div class="img_cont">
-									<img src="https://i.ibb.co/fSNP7Rz/icons8-chatgpt-512.png" class="rounded-circle user_img">
+									<img src="https://acschatbotnoisintern.blob.core.windows.net/nois-logo/New-Ocean-Infomation-System-logo-29.png" class="rounded-circle user_img">
 									<span class="online_icon"></span>
 								</div>
 								<div class="user_info">
-									<span>ChatBot</span>
+									<span>NOIS ChatBot</span>
 									<p>Ask me anything!</p>
 								</div>
 							</div>
@@ -73,7 +75,7 @@
 					$("#messageFormeight").append(userHtml);
 					var tempBotHtml = 
 					'<div class=" d-flex justify-content-start mb-4 myDiv"><div class="img_cont_msg">' 
-						+ '<img src="https://i.ibb.co/fSNP7Rz/icons8-chatgpt-512.png" class="rounded-circle user_img_msg">'
+						+ '<img src="https://acschatbotnoisintern.blob.core.windows.net/nois-logo/New-Ocean-Infomation-System-logo-29.png" class="rounded-circle user_img_msg">'
 						+ '</div><div class="msg_cotainer">' 
 							+ '<div class="loader"></div>'
 								+ '<span class="msg_time">' + str_time 
@@ -131,7 +133,7 @@
 
 				function scrollToTopOfUser() {
 					var messageFormeight = document.getElementById("messageFormeight");
-					var userResponses = messageFormeight.getElementsByClassName("loader");
+					var userResponses = messageFormeight.getElementsByClassName("msg_cotainer_send");
 					var latestUserResponse = userResponses[userResponses.length - 1];
 
 					// Scroll to the latest user response
